Add RISC-V test module

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ questa.tcl
 ies.tcl
 compile_simlib/
 simulate_testbench.*/
+sim_build/
+__pycache__/
+user_ip/
+
+transcript
+results.xml
+modelsim.ini
+compile_simlib.log
+*.bak
+.cxl*
+vivado*.jou
+vivado*.log
+vsim.wlf
+*.vstf
+*.xpr
